<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hiikey</string>
    <string name="location">Location</string>
    <string name="bulletin">Bulletin</string>
    <string name="search">Search</string>
    <string name="people">People</string>
    <string name="explore">Explore</string>
    <string name="google_map_api_key">AIzaSyBIuj5qgI16ThyZpPLo5l_1ntu56l0DPio</string>
    <string name="profile">Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_activity_c_event">activity_cEvent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="example"> Instagram </string>
    <string name="example2"> example </string>
    <string name="title_activity_discover">Discover</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_events">Events</string>
    <string name="title_newEvent">New Event</string>
    <string name="title_favEvent">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="title_signout">Sign Out</string>
    <string name="title_activity_new_post">NewPost</string>
    <string name="cdPrivPub">cdPrivPub</string>
    <string name="cdPubmess">public</string>
    <string name="cdPrivateMess">Private</string>
    <string name="title_activity_new_post2">New Post</string>
    <string name="title_activity_new_post3">New Post</string>
    <string name="cdDes3">background design 3</string>
    <string name="cdDes5">background design 5</string>
    <string name="cdDes6">background design 6</string>
    <string name="cdDes8">background design 8</string>
    <string name="title_activity_maps_leaf">Map</string>
    <string name="title_activity_map">map</string>
    <string name="stringMapId"> "doms230.k4p83746"</string>
    <string name="title_activity_maps">Clad World</string>
    <string name="title_activity_clad_view">Clad</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_interested">Interested</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_favs">Favs</string>
    <string name="title_activity_row_favs">Favs</string>
    <string name="at">at</string>
    <string name="title_activity_activity_row_timeline">Bulletin</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="checkout">Check out</string>
    <string name="title_prefrences">Prefrences</string>
    <string name="noshare">Nothing to share.</string>
    <string name="customBack">Custom Background</string>
    <string name="title_activity_which_post">New Post</string>
    <string name="title_activity_custom_post">New Post</string>
    <string name="title_activity_custom_post2">New Post</string>
    <string name="title_activity_imboard">imboard</string>
    <string name="title_activity_my_favs">imboard</string>
    <string name="title_activity_share_post">share Post</string>
    <string name="title_activity_counter">Counter</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="vibe">Vibe</string>
    <string name="distance">Distance</string>
    <string name="title_activity_places">Search City</string>
    <string name="placeExample">Baltimore; Morgan State University</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_new_profile">New Profile</string>
    <string name="title_activity_see_flyer">Flyer</string>
    <string name="host">Host</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="board">Board</string>
    <string name="confirmDeleteMessage"> PERMANENTLY remove
                                 your event from Hiikey?</string>
    <string name="confirmDeleteTitle">Confirm Deletion</string>
    <string name="action_info">Event Info</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    <string name="action_love">love</string>
    <string name="feature">Featured On:</string>
    <string name="number">0</string>
    <string name="lists"> Guest Lists</string>
    <string name="list">Host</string>
    <string name="unlist">Hosting</string>
    <string name="title_activity_board">Board</string>
    <string name="title_publicboard">Public</string>
    <string name="title_privateboard">GuestList</string>
    <string name="action_repost">Repost</string>
    <string name="title_activity_privacy">Privacy</string>
    <string name="title_activity_signup">SignupAct</string>
    <string name="title_activity_signin">SigninAct</string>
    <string name="accept">Accept</string>
    <string name="inviteFriends">Invite Friends to Imboard</string>
    <string name="title_activity_search_friends">Search</string>
    <string name="string_editprofile">Tap Image/Icons to Edit</string>
    <string name="title_activity_profile__info">Profile_Info</string>
    <string name="title_activity_your_event">Your Events</string>
    <string name="title_activity_hosts">Hosts</string>
    <string name="title_activity_guests">Guests</string>
    <string name="saves">Saves</string>
    <string name="noHostevents">No events found. You\'ll find events that you were invited to on this tab.</string>
    <string name="noDiscoverEvents">No events found. You\'ll find public events on this tab.</string>
    <string name="createfun">Create Fun</string>
    <string name="noguest">No one found.</string>
    <string name="nohost">No one found.</string>
    <string name="noYourEvent">No Event found.</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_search_stuff">SearchStuff</string>
    <string name="searchEvents">Search events by city or title!</string>
    <string name="title_activity_bulletin">Bulletin</string>
    <string name="title_activity_subscribed_bulletins">Subscribed Bulletins</string>
    <string name="title_activity_new_bulletin">New Bulletin</string>
    <string name="title_activity_delete_bulletin">PERMANENTLY remove
                                 your bulletin from Hiikey?</string>
    <string name="title_activity_edit_bulletin">Edit Bulletin</string>
    <string name="search_bulletins">Search for Bulletins!</string>
    <string name="verifiedMembers">Get Verified</string>
    <string name="savedFlyers">Saved Flyers</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_testtest">testtest</string>
    <string name="title_activity_signout">Signout</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_bulletin_v2">Bulletin</string>
    <string name="title_activity_home">Home</string>
    <string name="delete">Delete</string>
    <string name="title_activity_main">MainActivity</string>

</resources>