<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal"
        android:gravity="center" android:measureWithLargestChild="true"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_weight="0">
        <Button android:id="@+id/bulletin"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/bulletin"
            android:textColor="@color/appColor"
            android:textStyle="bold">
        </Button>
        <Button android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/people"
            android:textColor="@color/appColor"
            android:textStyle="bold">
        </Button>
        <Button android:id = "@+id/location"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_weight="1"
            android:background = "@color/white"
            android:text = "@string/location"
            android:textColor="@color/appColor"
            android:textStyle="bold">
        </Button>>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/searchPager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>



</LinearLayout>

